Issue #DTW-4: Moved z-index variables

--- a/source/_base/_vars.scss
+++ b/source/_base/_vars.scss
@@ -7,11 +7,6 @@
  */
 
 
-/* Z-index (inspired by https://www.smashingmagazine.com/2014/06/sassy-z-index-management-for-complex-layouts/)
-   ================================================================================================================== */
-
-$z-index-elements: map, header-overlay, header, content, nav, logo, overlay, hamburger-menu, nav-toggle;
-
 
 /* Layout
    ================================================================================================================== */
